FF add balance report
